index page - make sure 'view our work' is always visible when page first loads

--- a/public/foundation/scss/_settings.scss
+++ b/public/foundation/scss/_settings.scss
@@ -141,7 +141,7 @@ $anchor-text-decoration: none;
 $anchor-text-decoration-hover: underline;
 $hr-width: $global-width;
 $hr-border: 1px solid $light-gray;
-$hr-margin: rem-calc(56px) auto;
+$hr-margin: rem-calc(23px) auto;
 $list-lineheight: $paragraph-lineheight;
 $list-margin-bottom: $paragraph-margin-bottom;
 $list-style-type: disc;
